Fix page alignment

--- a/style.css
+++ b/style.css
@@ -8,15 +8,17 @@
 body {
     background-color: rgb(13, 20, 12);
     color: white;
+    min-width: 530px;
 }
 
 #column-holder {
-    width: 50%;
+    width: 1000px;
+    max-width: 90%;
 }
 
-@media only screen and (max-width: 1000px) {
-    #column-holder {
-        width: 90%;
+@media only screen and (max-width: 675px) {
+    #profile {
+        display: none;
     }
 }
 
@@ -56,7 +58,9 @@ span {
     text-decoration: underline dotted;
 }
 
-.profile {
+#profile {
+    width: 200px;
+    height: 200px;
     border-style: solid;
     border-width: 2px;
     border-color: rgb(233, 214, 153);
